Bug 1907289 - Reflow table cell if collapsed borders have changed. r=dshin, a=dmeehan

A potentially better approach could be to call FrameNeedsReflow from
nsBCTableCellFrame::SetBorderWidth... But it seems that might
over-invalidate quite a lot when recalculating borders, since it seems
we reset the relevant ones and then accumulate directly on the frame.

If that seems like a better approach, happy to give that a try. This
should be less risky for performance changes in general tho.

Differential Revision: https://phabricator.services.mozilla.com/D216409